# Sharepoint

./: .gitignore  README.md  pyproject.toml
src/church_archivist/: cli.py
src/church_archivist/preflight/: __init__.py  exclusions.py  extract.py  legibility.py  runner.py  schema.py  walker.py
tests/: conftest.py  test_preflight.py
