[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "church-archivist"
version = "0.1.0"
description = "Church SharePoint archive tool — pre-flight pipeline (slice 1 of N)."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "mammoth>=1.7",
    "opencv-python-headless>=4.9",
    "Pillow>=10.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
dev = ["pytest>=8.0", "reportlab>=4.0"]

[project.scripts]
church-archivist = "church_archivist.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
