[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "church-archivist"
version = "0.1.0"
description = "Church SharePoint archive tool — pre-flight pipeline (slice 1 of N)."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "mammoth>=1.7",
    "opencv-python-headless>=4.9",
    "Pillow>=10.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
# Test suite requires these. They are not "optional" in the sense that the
# suite cannot be skipped around them — conftest.py imports them at module
# level so a missing dep fails collection rather than silently skipping.
test = [
    "pytest>=8.0",
    "reportlab>=4.0",
    "numpy>=1.26",
]
dev = ["church-archivist[test]"]

[project.scripts]
church-archivist = "church_archivist.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
